--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-6 text-center">
-                        <button type="button" class="btn btn-primary " href="#" onclick="mainPage()">返回首页</button>
+                        <button type="button" class="btn btn-primary " href="#" onclick="mySwiper.slideTo(0)">返回首页</button>
                     </div>
                     <div class="col-xs-6 text-center">
-                        <button type="button" class="btn btn-primary" href="#" onclick="loginPage()">前去注册</button>
+                        <button type="button" class="btn btn-primary" href="#" onclick="mySwiper.slideTo(4)">前去注册</button>
                     </div>
                 </div>
 
@@ -244,15 +244,15 @@
             var regBox = {regMobile : /^0?1[3|4|5|8][0-9]\d{8}$/};
             var mflag = regBox.regMobile.test(document.form1.inputTel.value);
             if(mflag){
+                //-------------------------------------------------------------------------------------------ajax
+                //"此号码已被注册！请更换号码！"
+                //---------temp
                 TelCheckOk();
+                //--------temp
             }else{
                 TelCheckError("请正确填写手机号码！");
             }
-            //-------------------------------------------------------------------------------------------ajax
-            //"此号码已被注册！请更换号码！"
-            //---------temp
-            //TelCheckOk();
-            //--------temp
+
         }
 
 
